Draw with custom function; remove libs; fix water mark right alignment

--- a/css/lailaimail.css
+++ b/css/lailaimail.css
@@ -167,7 +167,7 @@ Used in JS
 
 .water-mark {
     position: absolute;
-    right: 55px;
+    right: 50px;
     bottom: 15px;
     height: 50px;
     opacity: 0.6;
